--- a/css/styles.css
+++ b/css/styles.css
@@ -502,7 +502,7 @@ img {
 }
 
 .footer-soc {
-    padding-left: 70px;
+    margin-left: 70px;
 }
 
 .footer-soc-title {
@@ -619,6 +619,10 @@ img {
 .portfolio-item {
     margin-left: 30px;
     margin-bottom: 30px;
+}
+
+.portfolio-link {
+    display: block;
 }
 
 .portfolio-link:hover,
